--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,20 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{site.baseurl}}/assets/css/common.css">
     <title>hi</title>
 </head>
 <body>
     <header>
-        <nav>
-
-            <ul>
-                <li><a href="{{site.baseurl}}/index.html">YS' TIL</a></li>
-                <li><a href="{{site.baseurl}}/children/about.html">ABOUT</a></li>
-            </ul>
-        </nav>
-        
-        
+        {% include nav.html %}
     </header>
     {{content}}
+
+    <footer>
+        {% include nav.html %}
+        Copyright, 임연수. All rights reserved.
+    </footer>
 </body>
 </html>
