updated config.yml and added posts for test

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <header>
-        {% include nav.html %}
+        {% include nav.html navclass='nav-top' %}
     </header>
     {{content}}
 
     <footer>
-        {% include nav.html %}
+        {% include nav.html navclass='nav-bottom' %}
         Copyright, 임연수. All rights reserved.
     </footer>
 </body>
