--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,5 @@
 <nav>
-    <ul>
+    <ul class="nav {{include.navclass}}">
         <li><a href="{{site.baseurl}}/index.html" class= "{% if page.url == '/' %} current {% endif %}">YS' TIL</a></li>
         <li><a href="{{site.baseurl}}/children/about.html" class= "{% if page.url == '/children/about.html' %} current {% endif %}">ABOUT</a></li>
         <li><a href="{{site.baseurl}}/children/test.html" class= "{% if page.url == '/children/test.html' %} current {% endif %}">TEST</a></li>
