--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -8,3 +8,18 @@ html{
 .current{
     color: gray;
 }
+
+.nav{
+    margin: 0;
+    padding: 0;
+
+    list-style-type: none;
+}
+
+.nav > li{
+    display: inline;
+}
+
+.nav-top{
+    font-size: 1.25em;
+}
