--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,8 @@
 <nav>
     <ul class="nav {{include.navclass}}">
-        <li><a href="{{site.baseurl}}/index.html" class= "{% if page.url == '/' %} current {% endif %}">YS' TIL</a></li>
-        <li><a href="{{site.baseurl}}/children/about.html" class= "{% if page.url == '/children/about.html' %} current {% endif %}">ABOUT</a></li>
-        <li><a href="{{site.baseurl}}/children/test.html" class= "{% if page.url == '/children/test.html' %} current {% endif %}">TEST</a></li>
+        <li><a href="{{site.baseurl}}/" class= "{% if page.url == '/' %} current {% endif %}">YS' TIL</a></li>
+        &nbsp;|&nbsp;
+        <li><a href="{{site.baseurl}}/children/about" class= "{% if page.url == '/children/about.html' %} current {% endif %}">About</a></li>
+        <!-- <li><a href="{{site.baseurl}}/children/main-test.html" class= "{% if page.url contains 'main-test' or page.url contains 'sub-test' %} current {% endif %}">Main-Test</a></li> -->
     </ul>
 </nav>
