--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="{{site.baseurl}}/css/main.css">
     <title>{% if page.title %}{{page.title}}&nbsp;|&nbsp;{% endif %}YS' TIL</title>
     <meta name="description" content="{{page.meta}}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class='masthead {{page.mastheadClass}}'>
