--- a/_layouts/post-project.html
+++ b/_layouts/post-project.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<h4><a href="{{site.baseurl}}">블로그</a> > <a href="{{site.baseurl}}/">{{page.category}}</a></h4>
+<h2>프로젝트</h2>
 
 <h1>{{page.title}}</h1>
 
