--- a/css/common.css
+++ b/css/common.css
@@ -2,10 +2,25 @@ html{
     margin: 0;
     padding: 0;
 
-    font: normal 100%/1.4 Georgia,serif;
+    font: 400;
+    font-family: 'IBM Plex Sans KR', sans-serif;
 }
 
 a{
     text-decoration: none;
     color: #222;
 }
+
+ul{
+    padding: 0px 10px 40px 10px;
+}
+
+ul > li{
+    list-style-type: none;
+}
+
+footer {
+    background-color: #383838;
+    color: #eee;
+    padding: 10px;
+}  
