--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,7 +2,6 @@
     <ul class="nav {{include.navclass}}">
         <li><a href="{{site.baseurl}}/" class= "{% if page.url == '/' %} current {% endif %}">YS' TIL</a></li>
         &nbsp;|&nbsp;
-        <li><a href="{{site.baseurl}}/children/about" class= "{% if page.url == '/children/about.html' %} current {% endif %}">About</a></li>
-        <!-- <li><a href="{{site.baseurl}}/children/main-test.html" class= "{% if page.url contains 'main-test' or page.url contains 'sub-test' %} current {% endif %}">Main-Test</a></li> -->
+        <li><a href="{{site.baseurl}}/about" class= "{% if page.url == '/about.html' %} current {% endif %}">ABOUT</a></li>
     </ul>
 </nav>
