--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,10 @@
     <header class='masthead {{page.mastheadClass}}'>
         {% include nav.html navclass='nav-top' %}
     </header>
-    {{content}}
+    <div class="default-box">
+        {{content}}
+    </div>
+    
 
     <footer>
         {% include nav.html navclass='nav-bottom' %}
