--- a/css/common.css
+++ b/css/common.css
@@ -10,9 +10,17 @@ a{
     text-decoration: none;
     color: #222;
 }
+a:hover{
+    color: rgb(138, 138, 138);
+}
 
 ul{
     padding: 0px 10px 40px 10px;
+}
+
+.default-box{
+    width: 50%;
+    margin: 10px;
 }
 
 ul > li{
