--- a/css/main.css
+++ b/css/main.css
@@ -4,3 +4,4 @@
 {% include_relative common.css %}
 {% include_relative masthead.css %}
 {% include_relative nav.css %}
+{% include_relative syntaxHighlight_monokai.css %}
