--- a/css/common.css
+++ b/css/common.css
@@ -5,6 +5,16 @@ html{
     font-family: 'IBM Plex Sans KR', sans-serif;
 }
 
+h3{
+    margin-bottom: .5em;
+}  
+
+p{
+    margin-left: 1em;
+    margin-top: .5em;
+    margin-bottom: 2em;
+}
+
 a{
     text-decoration: none;
     color: #222;
@@ -20,7 +30,7 @@ ul{
 }
 
 .default-box{
-    width: 50%;
+    width: 600px;
     margin: 10px;
 }
 
@@ -33,3 +43,7 @@ footer {
     color: #383838;
     padding: 10px;
 }  
+
+img {
+    width: 600px;
+}
