--- a/css/syntaxHighlight_monokai.css
+++ b/css/syntaxHighlight_monokai.css
@@ -1,5 +1,7 @@
 .highlight pre{
+    line-height: 16px;
     padding: 20px;
+    border-left: 5px #555555 solid;
 }
 .highlight pre { background-color: #272822; }
 .highlight .hll { background-color: #272822; }
