--- a/css/common.css
+++ b/css/common.css
@@ -5,6 +5,7 @@
 html,body{
     display: grid;
     justify-content: center;
+    margin-top: 0;
 }
 html{
     margin: 0;
@@ -24,6 +25,7 @@ h3{
 
 p{
     margin: 0;
+    padding-left: 20px;
 }
 
 a{
@@ -43,9 +45,12 @@ ul{
 }
 
 .default-box{
+    padding-top: 50px;
     line-height: 32px;
     width: 720px;
     margin: 10px;
+    /* position: relative;
+    top: 200px; */
 }
 
 ul > li{
@@ -59,5 +64,5 @@ footer {
 }  
 
 img {
-    width: 720px;
+    width: 700px;
 }
