updated posts & css

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,5 +3,12 @@
         <li><a href="{{site.baseurl}}/" class= "{% if page.url == '/' %} current {% endif %}">YS' TIL</a></li>
         &nbsp;|&nbsp;
         <li><a href="{{site.baseurl}}/about" class= "{% if page.url == '/about.html' %} current {% endif %}">ABOUT</a></li>
+        &nbsp;|&nbsp;
+        <li><a href="http://tommlimm.net" >hp</a></li>
+        &nbsp;|&nbsp;
+        <li><a href="https://www.instagram.com/tommlimm" >ig</a></li>
+        &nbsp;|&nbsp;
+        <li><a href="https://www.linkedin.com/in/tommlimm/" >li</a></li>
+        
     </ul>
 </nav>
