updated some posts

--- a/css/common.css
+++ b/css/common.css
@@ -71,7 +71,7 @@ a{
     padding-right: .1em;
 }
 a:hover{
-    background-color: #fff9a7;
+    background-color: #fff568;
 }
 
 .default-box ul li a{
