--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,8 +1,8 @@
 <nav>
     <ul class="nav {{include.navclass}}">
-        <li><a href="{{site.baseurl}}/" class= "{% if page.url == '/' %} current {% endif %}">YS' TIL</a></li>
+        <li><a href="{{site.baseurl}}/" class= "{% if page.url == '/' %} current {% endif %}">L's Junkyard</a></li>
         &nbsp;|&nbsp;
-        <li><a href="{{site.baseurl}}/about" class= "{% if page.url == '/about.html' %} current {% endif %}">ABOUT</a></li>
+        <li><a href="{{site.baseurl}}/about" class= "{% if page.url == '/about.html' %} current {% endif %}">About</a></li>
         &nbsp;|&nbsp;
         <li><a href="http://tommlimm.net" >hp</a></li>
         &nbsp;|&nbsp;
