--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{site.baseurl}}/css/main.css">
-    <title>{% if page.title %}{{page.title}}&nbsp;|&nbsp;{% endif %}YS' TIL</title>
+    <title>{% if page.title %}{{page.title}}&nbsp;|&nbsp;{% endif %}Lim's</title>
     <meta name="description" content="{{page.meta}}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
