--- a/css/syntaxHighlight_monokai.css
+++ b/css/syntaxHighlight_monokai.css
@@ -1,3 +1,9 @@
+code{
+    color: #f8f8f2;
+    background-color: #272822;
+    padding-left: 5px;
+    padding-right: 5px;
+}
 .highlight pre{
     line-height: 16px;
     padding: 20px;
