added posts & updated css

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,14 +1,17 @@
 <nav>
-    <ul class="nav {{include.navclass}}">
+    <ul class="nav int {{include.navclass}}">
         <li><a href="{{site.baseurl}}/" class= "{% if page.url == '/' %} current {% endif %}">L's Junkyard</a></li>
         &nbsp;|&nbsp;
         <li><a href="{{site.baseurl}}/about" class= "{% if page.url == '/about.html' %} current {% endif %}">About</a></li>
-        &nbsp;|&nbsp;
-        <li><a href="http://tommlimm.net" >hp</a></li>
-        &nbsp;|&nbsp;
-        <li><a href="https://www.instagram.com/tommlimm" >ig</a></li>
-        &nbsp;|&nbsp;
-        <li><a href="https://www.linkedin.com/in/tommlimm/" >li</a></li>
         
+    </ul>
+    <ul class="nav ext {{include.navclass}}">
+        <li><a href="http://tommlimm.net" target="_blank">hp</a></li>
+        &nbsp;|&nbsp;
+        <li><a href="https://www.instagram.com/tommlimm" target="_blank">ig</a></li>
+        &nbsp;|&nbsp;
+        <li><a href="https://www.linkedin.com/in/tommlimm/" target="_blank">li</a></li>
+        &nbsp;|&nbsp;
+        <li><a href = "mailto: tomandlim@gmail.com" target="_blank">em</a></li>
     </ul>
 </nav>
