--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,13 +15,14 @@
     <header class='masthead {{page.mastheadClass}}'>
         {% include nav.html navclass='nav-top' %}
     </header>
-    <div class="default-box">
+    <div class="default-box main">
         {{content}}
     </div>
     
 
     <footer>
         {% include nav.html navclass='nav-bottom' %}
+        <br>
         Copyright, 임연수. All rights reserved.
     </footer>
 </body>
