--- a/css/common.css
+++ b/css/common.css
@@ -35,7 +35,7 @@ h3{
 
 p{
     margin: 0;
-    padding-left: 20px;
+    padding-left: 0px;
 }
 
 .default-box{
@@ -50,7 +50,7 @@ p{
     padding: 0;
 }
 
-.default-box ul li {
+.main-container ul li {
     list-style-type: none;
 }
 
