--- a/css/nav.css
+++ b/css/nav.css
@@ -8,10 +8,20 @@
     padding: 0;
 
     list-style-type: none;
+
+    /* display: flex; */
 }
 
-.nav > li{
+.nav li{
     display: inline;
+}
+
+.int{
+    float: left;
+}
+
+.ext{
+    float: right;
 }
 
 .nav-top{
