--- a/css/masthead.css
+++ b/css/masthead.css
@@ -1,7 +1,7 @@
 .masthead{
     /* background-color: #383838; */
     color: #383838;
-    padding: 10px;
+    padding: 12px 10px 9px 10px;
     border-bottom: #383838 1px solid;
     position: fixed;
     width: 720px;
