--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 ---
-
-<div class='main-container'>
+<div class="home-container {{page.pageClass}}">
     {{content}}
 </div>
+
+
