--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 ---
 ---
-
+{% include_relative root.css %}
 {% include_relative common.css %}
 {% include_relative masthead.css %}
 {% include_relative nav.css %}
