--- a/css/syntaxHighlight_monokai.css
+++ b/css/syntaxHighlight_monokai.css
@@ -1,76 +1,79 @@
 p code{
-    color: rgb(63, 63, 63);
-    background-color: #f0f0f0;
+    color: var(--color-black);
+    background-color: var(--color-gray-200);
     padding: 2px 2px 2px 2px;
 }
 .highlight pre{
     line-height: 16px;
     padding: 20px;
-    border-left: 5px #f0f0f0 solid;
 }
-.highlight pre { background-color: #272822; }
-.highlight .hll { background-color: #272822; }
-.highlight .c { color: #75715e } /* Comment */
-.highlight .err { color: #960050; background-color: #1e0010 } /* Error */
-.highlight .k { color: #66d9ef } /* Keyword */
-.highlight .l { color: #ae81ff } /* Literal */
-.highlight .n { color: #f8f8f2 } /* Name */
-.highlight .o { color: #f92672 } /* Operator */
-.highlight .p { color: #f8f8f2 } /* Punctuation */
-.highlight .cm { color: #75715e } /* Comment.Multiline */
-.highlight .cp { color: #75715e } /* Comment.Preproc */
-.highlight .c1 { color: #75715e } /* Comment.Single */
-.highlight .cs { color: #75715e } /* Comment.Special */
-.highlight .dl { color: #f8f8f2 } /* Comment.Special */
+
+pre code{
+    color: var(--color-gray-200);
+}
+.highlight pre { background-color: var(--color-navy-800); }
+.highlight pre { background-color: var(--color-navy-800); }
+.highlight .c { color: var(--color-gray-600); } /* Comment */
+.highlight .err { color: var(--color-navy-800); background-color: var(--color-red-600) } /* Error */
+.highlight .k { color: var(--color-lightBlue) } /* Keyword */
+.highlight .l { color: var(--color-pink) } /* Literal */
+.highlight .n { color: var(--color-paleYellow) } /* Name */
+.highlight .o { color: var(--color-red-600) } /* Operator */
+.highlight .p { color: var(--color-yellow-0) } /* Punctuation */
+.highlight .cm { color: var(--color-gray-800) } /* Comment.Multiline */
+.highlight .cp { color: var(--color-gray-800) } /* Comment.Preproc */
+.highlight .c1 { color: var(--color-gray-800) } /* Comment.Single */
+.highlight .cs { color: var(--color-gray-800) } /* Comment.Special */
+.highlight .dl { color: var(--color-yellow-0) } /* Comment.Special */
 .highlight .ge { font-style: italic } /* Generic.Emph */
 .highlight .gs { font-weight: bold } /* Generic.Strong */
-.highlight .kc { color: #66d9ef } /* Keyword.Constant */
-.highlight .kd { color: #66d9ef } /* Keyword.Declaration */
-.highlight .kn { color: #f92672 } /* Keyword.Namespace */
-.highlight .kp { color: #66d9ef } /* Keyword.Pseudo */
-.highlight .kr { color: #66d9ef } /* Keyword.Reserved */
-.highlight .kt { color: #66d9ef } /* Keyword.Type */
-.highlight .ld { color: #e6db74 } /* Literal.Date */
-.highlight .m { color: #ae81ff } /* Literal.Number */
-.highlight .s { color: #e6db74 } /* Literal.String */
-.highlight .na { color: #a6e22e } /* Name.Attribute */
-.highlight .nb { color: #f8f8f2 } /* Name.Builtin */
-.highlight .nc { color: #a6e22e } /* Name.Class */
-.highlight .no { color: #66d9ef } /* Name.Constant */
-.highlight .nd { color: #a6e22e } /* Name.Decorator */
-.highlight .ni { color: #f8f8f2 } /* Name.Entity */
-.highlight .ne { color: #a6e22e } /* Name.Exception */
-.highlight .nf { color: #a6e22e } /* Name.Function */
-.highlight .nl { color: #f8f8f2 } /* Name.Label */
-.highlight .nn { color: #f8f8f2 } /* Name.Namespace */
-.highlight .nx { color: #a6e22e } /* Name.Other */
-.highlight .py { color: #f8f8f2 } /* Name.Property */
-.highlight .nt { color: #f92672 } /* Name.Tag */
-.highlight .nv { color: #f8f8f2 } /* Name.Variable */
-.highlight .ow { color: #f92672 } /* Operator.Word */
-.highlight .w { color: #f8f8f2 } /* Text.Whitespace */
-.highlight .mf { color: #ae81ff } /* Literal.Number.Float */
-.highlight .mh { color: #ae81ff } /* Literal.Number.Hex */
-.highlight .mi { color: #ae81ff } /* Literal.Number.Integer */
-.highlight .mo { color: #ae81ff } /* Literal.Number.Oct */
-.highlight .sb { color: #e6db74 } /* Literal.String.Backtick */
-.highlight .sc { color: #e6db74 } /* Literal.String.Char */
-.highlight .sd { color: #e6db74 } /* Literal.String.Doc */
-.highlight .s2 { color: #e6db74 } /* Literal.String.Double */
-.highlight .se { color: #ae81ff } /* Literal.String.Escape */
-.highlight .sh { color: #e6db74 } /* Literal.String.Heredoc */
-.highlight .si { color: #e6db74 } /* Literal.String.Interpol */
-.highlight .sx { color: #e6db74 } /* Literal.String.Other */
-.highlight .sr { color: #e6db74 } /* Literal.String.Regex */
-.highlight .s1 { color: #e6db74 } /* Literal.String.Single */
-.highlight .ss { color: #e6db74 } /* Literal.String.Symbol */
-.highlight .bp { color: #f8f8f2 } /* Name.Builtin.Pseudo */
-.highlight .vc { color: #f8f8f2 } /* Name.Variable.Class */
-.highlight .vg { color: #f8f8f2 } /* Name.Variable.Global */
-.highlight .vi { color: #f8f8f2 } /* Name.Variable.Instance */
-.highlight .il { color: #ae81ff } /* Literal.Number.Integer.Long */
+.highlight .kc { color: var(--color-blue-300) } /* Keyword.Constant */
+.highlight .kd { color: var(--color-blue-300) } /* Keyword.Declaration */
+.highlight .kn { color: var(--color-red-100) } /* Keyword.Namespace */
+.highlight .kp { color: var(--color-blue-300) } /* Keyword.Pseudo */
+.highlight .kr { color: var(--color-blue-300) } /* Keyword.Reserved */
+.highlight .kt { color: var(--color-blue-300) } /* Keyword.Type */
+.highlight .ld { color: var(--color-yellow-500) } /* Literal.Date */
+.highlight .m { color: var(--color-lightBlue) } /* Literal.Number */
+.highlight .s { color: var(--color-yellow-500) } /* Literal.String */
+.highlight .na { color: var(--color-green-400) } /* Name.Attribute */
+.highlight .nb { color: var(--color-yellow-0) } /* Name.Builtin */
+.highlight .nc { color: var(--color-green-400) } /* Name.Class */
+.highlight .no { color: var(--color-blue-300) } /* Name.Constant */
+.highlight .nd { color: var(--color-green-400) } /* Name.Decorator */
+.highlight .ni { color: var(--color-yellow-0) } /* Name.Entity */
+.highlight .ne { color: var(--color-green-400) } /* Name.Exception */
+.highlight .nf { color: var(--color-green-400) } /* Name.Function */
+.highlight .nl { color: var(--color-yellow-0) } /* Name.Label */
+.highlight .nn { color: var(--color-yellow-0) } /* Name.Namespace */
+.highlight .nx { color: var(--color-green-400) } /* Name.Other */
+.highlight .py { color: var(--color-yellow-0) } /* Name.Property */
+.highlight .nt { color: var(--color-red-100) } /* Name.Tag */
+.highlight .nv { color: var(--color-yellow-0) } /* Name.Variable */
+.highlight .ow { color: var(--color-red-100) } /* Operator.Word */
+.highlight .w { color: var(--color-yellow-0) } /* Text.Whitespace */
+.highlight .mf { color: var(--color-lightBlue) } /* Literal.Number.Float */
+.highlight .mh { color: var(--color-lightBlue) } /* Literal.Number.Hex */
+.highlight .mi { color: var(--color-lightBlue) } /* Literal.Number.Integer */
+.highlight .mo { color: var(--color-lightBlue) } /* Literal.Number.Oct */
+.highlight .sb { color: var(--color-yellow-500) } /* Literal.String.Backtick */
+.highlight .sc { color: var(--color-yellow-500) } /* Literal.String.Char */
+.highlight .sd { color: var(--color-yellow-500) } /* Literal.String.Doc */
+.highlight .s2 { color: var(--color-yellow-500) } /* Literal.String.Double */
+.highlight .se { color: var(--color-lightBlue) } /* Literal.String.Escape */
+.highlight .sh { color: var(--color-yellow-500) } /* Literal.String.Heredoc */
+.highlight .si { color: var(--color-yellow-500) } /* Literal.String.Interpol */
+.highlight .sx { color: var(--color-yellow-500) } /* Literal.String.Other */
+.highlight .sr { color: var(--color-yellow-500) } /* Literal.String.Regex */
+.highlight .s1 { color: var(--color-yellow-500) } /* Literal.String.Single */
+.highlight .ss { color: var(--color-yellow-500) } /* Literal.String.Symbol */
+.highlight .bp { color: var(--color-yellow-0) } /* Name.Builtin.Pseudo */
+.highlight .vc { color: var(--color-yellow-0) } /* Name.Variable.Class */
+.highlight .vg { color: var(--color-yellow-0) } /* Name.Variable.Global */
+.highlight .vi { color: var(--color-yellow-0) } /* Name.Variable.Instance */
+.highlight .il { color: var(--color-lightBlue) } /* Literal.Number.Integer.Long */
 
 .highlight .gh { } /* Generic Heading & Diff Header */
-.highlight .gu { color: #75715e; } /* Generic.Subheading & Diff Unified/Comment? */
-.highlight .gd { color: #f92672; } /* Generic.Deleted & Diff Deleted */
-.highlight .gi { color: #a6e22e; } /* Generic.Inserted & Diff Inserted */
+.highlight .gu { color: var(--color-yellow-400); } /* Generic.Subheading & Diff Unified/Comment? */
+.highlight .gd { color: var(--color-red-100); } /* Generic.Deleted & Diff Deleted */
+.highlight .gi { color: var(--color-green-400); } /* Generic.Inserted & Diff Inserted */
