--- a/css/main.css
+++ b/css/main.css
@@ -5,3 +5,4 @@
 {% include_relative masthead.css %}
 {% include_relative nav.css %}
 {% include_relative syntaxHighlight_monokai.css %}
+{% include_relative about.css %}
