--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" href="{{site.baseurl}}/favicon.png" type="image/png" sizes="30x30">
         <link rel="stylesheet" href="{{site.baseurl}}/css/main.css">
         <title>{% if page.title %}{{page.title}}&nbsp;|&nbsp;{% endif %}Lim's</title>
         <meta name="description" content="{{page.meta}}">
@@ -22,7 +23,7 @@
         </div>
         
 
-        <footer>
+        <footer class='{{page.mastfooterClass}}'>
             <div class="nav_box">
                 {% include nav.html navclass='nav-bottom' %}
                 <br>
