--- a/css/nav.css
+++ b/css/nav.css
@@ -1,15 +1,12 @@
 
 .current{
-    color: #6e6e6e;
+    color: var(--color-gray-600);
 }
 
 .nav{
     margin: 0;
     padding: 0;
-
     list-style-type: none;
-
-    /* display: flex; */
 }
 
 .nav li{
