writing on about

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" href="{{site.baseurl}}/favicon.png" type="image/png" sizes="30x30">
         <link rel="stylesheet" href="{{site.baseurl}}/css/main.css">
-        <title>{% if page.title %}{{page.title}}&nbsp;|&nbsp;{% endif %}Lim's</title>
+        <title>{% if page.title %}{{page.title}}&nbsp;|&nbsp;{% endif %}임연수/개발자_블로그</title>
         <meta name="description" content="{{page.meta}}">
         <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,7 +27,7 @@
             <div class="nav_box">
                 {% include nav.html navclass='nav-bottom' %}
                 <br>
-                Copyright, 임연수. All rights reserved.
+                이 웹사이트는 데스크탑 버전에 최적화 되어있습니다;) Copyright, 임연수. All rights reserved.
             </div>
         </footer>
     </body>
