writings on site

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
             <div class="nav_box">
                 {% include nav.html navclass='nav-bottom' %}
                 <br>
-                이 웹사이트는 데스크탑 버전에 최적화 되어있습니다;) Copyright, 임연수. All rights reserved.
+                이 웹사이트는 개발중이며 현재는 데스크탑 버전에 최적화 되어있습니다;) <br> Copyright, 임연수. All rights reserved.
             </div>
         </footer>
     </body>
