--- a/css/root.css
+++ b/css/root.css
@@ -62,6 +62,6 @@
 }
 
 ::selection {
-    color: var(--color-white);
-    background: var(--color-black);
+    color: var(--color-black);
+    background: var(--color-yellow);
   }
