--- a/css/common.css
+++ b/css/common.css
@@ -2,6 +2,18 @@
     box-sizing: border-box;
 }
 
+hr{
+    margin: 5em 0;
+    border: none;
+    text-align: center;
+    height: auto;
+}
+hr::after {
+    content: "···";
+    letter-spacing: .4em;
+    font-size: 1.5em;
+}
+
 html,body{
     margin: 0;
     word-break: keep-all;
