--- a/css/about.css
+++ b/css/about.css
@@ -161,3 +161,15 @@
     width: 300px;
     height: auto;
 }
+
+.black-filter {
+    filter: brightness(0%);
+}
+
+.gary-filter {
+    filter: invert(100%) sepia(100%) saturate(1776%) hue-rotate(350deg) brightness(101%) contrast(96%);
+}
+
+.twitter-blue-filter {
+    filter: invert(57%) sepia(37%) saturate(776%) hue-rotate(176deg) brightness(101%) contrast(96%);
+}
