--- a/css/about.css
+++ b/css/about.css
@@ -31,6 +31,9 @@
     width: 100%;
     height: 100%;
     position: relative;
+
+    transition-property: transform, background-color;
+    transition-duration: 400ms;
 }
 
 .item .frame .cover {
@@ -49,12 +52,15 @@
     color: var(--color-white); 
     line-height: 1.05em;
     font-size: 4em;
+    transition-property: color;
+    transition-duration: 400ms;
 }
 
 .item .frame .text a:hover{ 
     background-color:inherit;
 }
 
+/* myName */
 .item1 .frame .text{
     color: var(--color-black); 
     line-height: 1.1em;
@@ -68,6 +74,12 @@
     line-height: 1.1em;
     font-size: .75em;
 }
+
+#myName:hover .frame{
+    background-color: var(--color-about-point);
+}
+
+/* hero image */
 
 .item2{
     grid-column-start: 2;
@@ -89,6 +101,8 @@
     transform: scale(.95,.95);
 }
 
+/* link to designer */
+
 .item3{
     background-color: var(--color-black);
 }
@@ -100,6 +114,11 @@
 .item3:hover .cover{
     transform: scale(0,1);
 }
+.item3:hover .frame .text a{
+    color: var(--color-about-point);
+}
+
+/* link to developer */
 
 .item4{
     grid-column-start: 1;
@@ -107,6 +126,10 @@
     grid-row-start: 2;
     grid-row-end: 4;
     background-color: var(--color-black);
+}
+
+.item4:hover .frame .text a{
+    color: var(--color-about-point);
 }
 
 .item4 .frame .cover {
@@ -117,7 +140,7 @@
     cursor: pointer;
     transform: scale(1,0);
 }
-
+/* jLottie*/
 .item5{
     background-color: var(--color-white);
     display: flex;
@@ -130,7 +153,7 @@
     height: auto;
 }
 
-
+/* description */
 .item6 .frame {
     padding: 20px 20px;
     display: inherit;
@@ -141,20 +164,24 @@
     letter-spacing:-0.05em
 }
 
+#description:hover .frame{
+    background-color: var(--color-about-point);
+}
+
+/* lottie-player */
+
 .item7{
     background-color: var(--color-black);
 }
 
 .item7 .frame{
-    transition-property: transform, background-color;
-    transition-duration: 200ms;
     cursor: pointer;
     background-color: var(--color-white);
 }
 
-.item7:hover .frame{
-    /* transform: scale(.95); */
-    background-color: var(--color-black);
+#item7:hover .frame{
+    background-color: var(--color-about-point);
+    transform: scale(.95);
 }
 
 .item7 .frame #my-animation{
@@ -167,7 +194,7 @@
 }
 
 .gary-filter {
-    filter: invert(100%) sepia(100%) saturate(1776%) hue-rotate(350deg) brightness(101%) contrast(96%);
+    /* filter: invert(100%) sepia(100%) saturate(1776%) hue-rotate(350deg) brightness(101%) contrast(96%); */
 }
 
 .twitter-blue-filter {
