--- a/_layouts/post-base.html
+++ b/_layouts/post-base.html
@@ -2,7 +2,10 @@
 layout: default
 ---
 <div class="blog-container {{page.pageClass}}">
-    <h4><a href="{{site.baseurl}}/">블로그</a> > <a href="{{site.baseurl}}/">{{page.category}}</a></h4>
+    <ul class="breadcrumb">
+        <li><a href="{{site.baseurl}}/">블로그</a></li>
+        <li><a href="{{site.baseurl}}/">{{page.category}}</a></li>
+    </ul>
 
     <h1>{{page.title}}</h1>
     {% if page.source %}
