--- a/css/common.css
+++ b/css/common.css
@@ -1,45 +1,32 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@200;400;600&display=swap');
+</style> 
+
 * {
     box-sizing: border-box;
 }
-
-hr{
-    margin: 5em 0;
-    border: none;
-    text-align: center;
-    height: auto;
-}
-hr::after {
-    content: "···";
-    letter-spacing: .4em;
-    font-size: 1.5em;
-}
-
 html,body{
     margin: 0;
-    word-break: keep-all;
-}
-html{
-    margin: 0;
     padding: 0;
-
-    font-family: 'IBM Plex Sans KR', sans-serif;
+    font-family: 'IBM Plex Sans KR', "Arial", sans-serif;
+    font-weight: 300;
+    word-break: keep-all;
+    font-size: 16px;
 }
 
-blockquote{
-    background-color: var(--color-gray-200);
-    padding-top: 5px;
-    padding-bottom: 5px;
-}
-h1,h2,h3{
+h1,
+h2,
+h3{
     line-height: 1.7;
     cursor: text;
     position: relative;
 }
+
 h1{ 
     font-size: 2rem;
-    margin-top: 0.5rem;
-    margin-bottom: 1rem;
-}  
+    margin-top: 0.5em;
+    margin-bottom: 1em;
+}
+
 h2{
     font-size: 1.4rem;
     /* border-bottom: 1px solid #eee; */
@@ -62,7 +49,6 @@ p{
 
 ol, ul, dl {
     margin-top: 0;
-    margin-bottom: 1rem;
 }
 ul{
     list-style-type: disc;
@@ -72,9 +58,33 @@ li{
     text-align: -webkit-match-parent;
 }
 
+code{
+    font-size: .75em;
+}
+
+hr{
+    margin: 5em 0;
+    border: none;
+    text-align: center;
+    height: auto;
+}
+
+hr::after {
+    content: "···";
+    letter-spacing: .4em;
+    font-size: 1.5em;
+}
+
+blockquote{
+    background-color: var(--color-gray-200);
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
 .blog-container .language-plaintext .highlight pre{
     background-color: var(--color-gray-200);
 }
+
 .blog-container .language-plaintext .highlight code{
     color: var(--color-black);
 }
@@ -94,7 +104,7 @@ li{
 }
 
 .default-box .blog-container{
-    padding-top: 40px;
+    padding-top: 54px;
     padding-bottom: 10px;
     line-height: 1.8;
 }
@@ -154,8 +164,7 @@ a{
     padding-right: .1em;
 }
 a:hover{
-    color: var(--color-white);
-    background-color:  var(--color-black);
+    text-decoration:underline; 
 }
 
 .blog-container a{
@@ -163,17 +172,8 @@ a:hover{
     /* transition-duration: 200ms; */
 }
 
-.blog-container a:hover{
-    color: var(--color-white);
-    background-color: var(--color-blue-500);;
-}
-
 .blog-container h4 a{
     color: var(--color-black);
-}
-.blog-container h4 a:hover{
-    background-color: var(--color-black);
-    color: var(--color-white);
 }
 
 .task-list{
