--- a/css/nav.css
+++ b/css/nav.css
@@ -1,26 +1,47 @@
-
+/* primary nav */
+.nav-top{
+    font-size: 1.25rem;
+}
 .current{
     color: var(--color-gray-600);
 }
 
-.nav{
+ul.nav{
     margin: 0;
     padding: 0;
     list-style-type: none;
 }
 
-.nav li{
+ul.nav li,
+ul.breadcrumb li{
     display: inline;
 }
 
-.int{
+ul.nav li+li::before{
+    content: "| "
+}
+
+ul.int{
     float: left;
 }
 
-.ext{
+ul.ext{
     float: right;
 }
 
-.nav-top{
-    font-size: 1.25em;
+/* secondary nav */
+
+ul.breadcrumb{
+    list-style-type: none;
+    padding: 0;
+    font-size: 1em;
+    font-weight: 400;
+}
+
+ul.breadcrumb a{
+    color: var(--color-black);
+}
+
+ul.breadcrumb li+li::before{
+    content: "> "
 }
