--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,7 @@
         <link rel="stylesheet" href="{{site.baseurl}}/css/main.css">
         <title>{% if page.title %}{{page.title}}&nbsp;|&nbsp;{% endif %}임연수/개발자_블로그</title>
         <meta name="description" content="{{page.meta}}">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@300;400;500&display=swap" rel="stylesheet"> 
     </head>
     <body>
         <header class='masthead {{page.mastheadClass}}'>
