--- a/css/common.css
+++ b/css/common.css
@@ -1,14 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@200;400;600&display=swap');
-</style> 
-
 * {
     box-sizing: border-box;
 }
 html,body{
     margin: 0;
     padding: 0;
-    font-family: 'IBM Plex Sans KR', "Arial", sans-serif;
-    font-weight: 300;
+    font-family: 'IBM Plex Sans KR','Arial', sans-serif;
+    font-weight: var(--font-regular);
     word-break: keep-all;
     font-size: 16px;
 }
@@ -19,12 +16,14 @@ h3{
     line-height: 1.7;
     cursor: text;
     position: relative;
+    font-weight: var(--font-bold);
 }
 
 h1{ 
     font-size: 2rem;
-    margin-top: 0.5em;
-    margin-bottom: 1em;
+    margin-top: 0.5rem;
+    margin-bottom: 1rem;
+    line-height: 1.5;
 }
 
 h2{
@@ -33,7 +32,6 @@ h2{
     margin-top: 3rem;
     margin-bottom: 1rem;
     padding: 0;
-    font-weight: bold;
 }  
 
 h3{
@@ -45,6 +43,11 @@ p{
     font-size: 1em;
     padding-left: 0px;
     margin: 15px 0;
+}
+
+em{
+    font-size: .9rem;
+    font-weight: var(--font-light);
 }
 
 ol, ul, dl {
