--- a/_layouts/post-project.html
+++ b/_layouts/post-project.html
@@ -8,5 +8,5 @@ layout: default
 {{content}}
 
 <footer>
-    <p>Source: <a href="{{page.source}}">{{page.source}}</a></p>
+    <p>Source: <a href="{{page.source}}" target="_blank">{{page.source}}</a></p>
 </footer>
