--- a/_layouts/post-base.html
+++ b/_layouts/post-base.html
@@ -9,7 +9,7 @@ layout: default
 
     <h1>{{page.title}}</h1>
     {% if page.source %}
-    <p>Source: <a href="{{page.source}}">{{page.source}}</a></p>
+    <p>Source: <a href="{{page.source}}" target="_blank">{{page.source}}</a></p>
     {% endif %} 
     
     {{content}}
