--- a/css/masthead.css
+++ b/css/masthead.css
@@ -2,7 +2,7 @@
     /* background-color: #383838; */
     color: var(--color-black);
     position: fixed;
-    background-color: var(--color-white);
+    background-color: rgba(255,255,255,.92);;
     z-index: 1;
     display: flex;
     justify-content: center;
