modifed: Post Markdownlint;)

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 ---
 ---
+{% include_relative reset.css %}
 {% include_relative root.css %}
 {% include_relative common.css %}
 {% include_relative masthead.css %}
