--- a/css/common.css
+++ b/css/common.css
@@ -1,9 +1,8 @@
 * {
     box-sizing: border-box;
 }
+
 html,body{
-    margin: 0;
-    padding: 0;
     font-family: 'IBM Plex Sans KR','Arial', sans-serif;
     font-weight: var(--font-regular);
     word-break: keep-all;
@@ -27,8 +26,7 @@ h1{
 }
 
 h2{
-    font-size: 1.4rem;
-    /* border-bottom: 1px solid #eee; */
+    font-size: 1.5rem;
     margin-top: 3rem;
     margin-bottom: 1rem;
     padding: 0;
@@ -54,20 +52,36 @@ ol, ul, dl {
     margin-top: 0;
 }
 ul{
+    display: block;
     list-style-type: disc;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px;
 }
+
 li{
     display: list-item;
     text-align: -webkit-match-parent;
 }
 table{
-    text-align: center;
+    color: rgba(0,0,0,.75);
+    font-size: 16px;
+    font-variant-ligatures: common-ligatures;
+    line-height: 1.67;
+    -webkit-font-smoothing: antialiased;
 }
 td{
     padding: 0px 60px;
 }
 code{
-    font-size: .75em;
+    font-size: .75rem;
+    font-family: monospace;
+}
+code.language-bush{
+    color: var(--color-black);
+    background-color: var(--color-gray-200);
 }
 
 hr{
@@ -84,13 +98,24 @@ hr::after {
 }
 
 blockquote{
-    background-color: var(--color-gray-200);
-    padding-top: 5px;
-    padding-bottom: 5px;
+    border-left: solid 8px var(--color-gray-200);
+    margin: 15px 0;
+    padding: 0px 35px;
 }
 
-.blog-container .language-plaintext .highlight pre{
+blockquote p {
+    margin: 5px 0;
+}
+
+.blog-container .language-plaintext .highlight pre,
+pre{
     background-color: var(--color-gray-200);
+}
+
+pre{
+    padding: 20px;
+    line-height: 1.05;
+    letter-spacing: .01rem;
 }
 
 .blog-container .language-plaintext .highlight code{
